dnl 
dnl configure.in for molsim - not really nice but it works OK
dnl 

AC_INIT(molsim, development, jesperschmidthansen@gmail.com)

AC_LANG_C
AC_PROG_CC

dnl need to check for some system tools
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_DEFUN([AC_PROG_AR], [AC_CHECK_TOOL(AR, ar, :)])
AC_PROG_AR

dnl checking for some C99 features
AC_CHECK_FUNCS(isinf isnan)
AC_C_INLINE
AC_CHECK_DECL(__func__, ,AC_MSG_WARN([
			Did not find __func__ macro. The compiler 
			must support this!]))

dnl checking for inline
if test $CC = 'gcc' ; then 
  INLINE=-fgnu89-inline  
fi 

AC_SUBST(INLINE)

dnl checking for C99 support - only gcc or icc  
if test $CC = 'gcc' ; then 
  C99=-std=c99
elif  test $CC = 'icc' ; then 
  C99=-std=c99 
else
  echo "I will not use gcc or icc. Please manually set the 
        C99 compiler flag if needed. E.g. make C99=-std=c99 or change the 
	Makefile manually"   
fi 

AC_SUBST(C99) 

dnl checking for complex support
AC_CHECK_HEADER(complex.h, COMPLEX=-DCOMPLEX, AC_MSG_WARN([
		Couldn't find complex standard header - will not build
	 	for complex array support then]))
AC_SUBST(COMPLEX)		

dnl OMP
AC_CHECK_HEADER(omp.h, OMP=-fopenmp, AC_MSG_ERROR([Couldn't find openmp support]))
AC_SUBST(OMP)
		
dnl output Makefile
AC_OUTPUT(Makefile)
